--- a/app/views/homes/show.html.haml
+++ b/app/views/homes/show.html.haml
@@ -1,4 +1,4 @@
 %div.col-md-4.col-md-offset-4
-  = form_tag root_path, id: 'game_form', method: 'get', remote: true do
+  = form_tag update_game_board_path, id: 'game_form', method: 'get' do
     %div#game_board
       = render 'game_board'
