--- a/app/views/homes/show.html.haml
+++ b/app/views/homes/show.html.haml
@@ -1,3 +1,5 @@
 %div.col-md-4.col-md-offset-4
   %div#game_board
     = render 'game_board'
+  %br
+  %div= link_to 'Restart Game?', restart_game_path
