Working on computer_ai.

--- a/app/views/homes/show.html.haml
+++ b/app/views/homes/show.html.haml
@@ -2,4 +2,4 @@
   %div#game_board
     = render 'game_board'
   %br
-  %div= link_to 'Restart Game?', restart_game_path
+  %div= link_to 'Restart game?', restart_game_path
